src/index.scss
@mixin background {
  background: no-repeat center / 100% 100%;
}

.list {
  overflow: hidden;
  box-sizing: border-box;

  .list-header {
    .list-cont {
      border-collapse: collapse;
    }

    .list-row {
      @include background;

      .list-cell {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }
    }
  }

  .list-body {
    overflow-x: hidden;
  }

  .list-cont {
    margin: 0;
    padding: 0;
    display: table;
    box-sizing: border-box;
    table-layout: fixed;
    width: 100%;
    height: auto;
    transition: all 400ms;

    .list-row {
      display: table-row;
      list-style: none;
      border: none !important;
      transition: all 300ms cubic-bezier(0, 0, 0.58, 1);
      @include background;

      &.list-row-start {
        transform: scale(0.8);
        opacity: 0;
      }

      &.list-row-end {
        opacity: 1;
        transform: scale(1);
      }

      &.click-row {
        cursor: pointer;
      }

      .list-cell {
        display: table-cell;
        box-sizing: border-box;
        text-align: center;
        vertical-align: middle;
        word-break: break-all;
        overflow: hidden;
        @include background;

        & * {
          vertical-align: middle;
        }

        a {
          color: currentColor;
          text-decoration: transparent;
        }

        label {
          vertical-align: middle;

          span, input {
            vertical-align: middle;
            padding: 0 5px;
          }
        }
      }
    }
  }
}

